Update Docker workflow branch and add rate limiting support in TestMessageConstructor

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,7 +9,7 @@
       - 'v*'
     # Builds from the master branch will be pushed with the `dev` tag.
     'branches':
-      - 'master'
+      - 'master1'
 
 'jobs':
   'docker':
