build: update Go toolchain to 1.24.2 and add Docker workflow
refactor(proxy): rename bindRetryCount to bindRetryNum and split listener functions
fix(proxy): improve error messages in config validation
docs(proxy): remove TODO comment in DNS64 setup
test: remove unused test files and update test cases
feat(upstream): add SOCKS proxy support for plain DNS and DoT
chore: remove unused proxy detection code from bootstrap

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,13 +11,15 @@ name: Build
     #   - '*'
   'pull_request':
 
+
+permissions:
+  contents: write
+  pull-requests: write
+  repository-projects: write
+
 jobs:
   tests:
     runs-on: ${{ matrix.os }}
-    permissions:
-      contents: write
-      pull-requests: write
-      repository-projects: write
     strategy:
       matrix:
         os:
@@ -66,7 +68,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
