refactor(upstream): simplify proxy handling and http3 transport logic
Remove unused proxy URL logging and restrict HTTP3 to direct connections only
Add nil check for dial context in H3 probing to prevent potential panic

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,8 +7,8 @@ name: Build
   'push':
     'tags':
       - 'v*'
-    # 'branches':
-    #   - '*'
+    'branches':
+      - '*'
   'pull_request':
 
 
