build: 更新 Docker 工作流以禁用特定标签的构建

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,7 +6,7 @@
 'on':
   'push':
     'tags':
-      - 'v*'
+      - 'disabled-v*'
     # Builds from the master branch will be pushed with the `dev` tag.
     # 'branches':
     #   - 'master'
